2. Design Patterns/1. Creational/Factory/Examples/1. MyPizza/Good/MyPizza_Good_SimpleFactory/SeafoodPizza.cs
namespace MyPizza_Good_SimpleFactory
{
    internal class SeafoodPizza : Pizza
    {
    }
}